--- a/msig.css
+++ b/msig.css
@@ -303,7 +303,9 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 
 /* LINK */
 .msig-url-clean{text-decoration:none;cursor:pointer}.msig-url-clean:hover{color:#38B6FF!important}
-.msig-url-gold{text-decoration:none;color:#F0CB4C!important}.msig-url-gold:hover{color:#BA924B!important}
+.msig-url-gold{text-decoration:none;color:#F0CB4C!important}
+.msig-url-gold:hover{color:#BA924B!important}
+.msig-link-disable{opacity: 0.6; cursor: not-allowed;}
 
 /* FORM */
 .msig-input{padding:8px;display:block;border:1px solid #795548;width:100%;background-color: transparent;color:#c0c0c0; margin:0 auto}
