--- a/msig.css
+++ b/msig.css
@@ -29,7 +29,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5;color:#CCCABD;}html{overflow-x:hidden}main{padding-top:300px}
 */
 html,body {margin: 150px 1em 1em 1em; background-image: linear-gradient(to bottom right, #0D102C, #31204d); font-family: "Old Standard TT", serif; color: #CCCABD; font-size: 1rem;}
-h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}
+h1{font-size:2rem}h2{font-size:1.8rem}h3{font-size:1.6rem}h4{font-size:1.4rem}h5{font-size:1.3rem}h6{font-size:1.2rem}
 .w3-serif{font-family:serif}.w3-sans-serif{font-family:sans-serif}.w3-cursive{font-family:cursive}.w3-monospace{font-family:monospace}
 h1,h2,h3,h4,h5,h6{font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;text-transform:capitalize;text-shadow: 4px 4px 6px #0D102C}.w3-wide{letter-spacing:4px}
 hr{border:0;border-top:1px solid #eee;margin:20px 0}
@@ -339,6 +339,12 @@ ul.msig-dark-menu li a {display: list-item; color: #CCCABD; text-align: center; 
 ul.msig-dark-menu li a:hover:not(.active) { background-color: #121638;}
 ul.msig-dark-menu li a.active {background-color: #38B6FF;}
 @media screen and (max-width: 300px) {ul.darkMenu li.right, ul.darkMenu li {float: none;}}
+.msig-ol-h1{font-size:2.2rem; font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;;text-shadow: 4px 4px 6px #0D102C}
+.msig-ol-h2{font-size:2rem; font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;;text-shadow: 4px 4px 6px #0D102C}
+.msig-ol-h3{font-size:1.8rem; font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;;text-shadow: 4px 4px 6px #0D102C}
+.msig-ol-h4{font-size:1.6rem; font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;;text-shadow: 4px 4px 6px #0D102C}
+.msig-ol-h5{font-size:1.4rem; font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;;text-shadow: 4px 4px 6px #0D102C}
+.msig-ol-h6{font-size:1.3rem; font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;;text-shadow: 4px 4px 6px #0D102C}
 
 /* TABLE */
 .msig-table,.msig-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}
@@ -383,6 +389,7 @@ ul.msig-dark-menu li a.active {background-color: #38B6FF;}
 .msig-text-light-blue{color: #38B6FF!important;}
 .msig-text-purple{color: #6540A2!important;}
 .msig-text-gold{color: #9D6C28!important;}
+.msig-text-reset{font-family: "Old Standard TT", serif; color: #CCCABD; font-size: 1rem;}
 /* circle can be use with <span class="msig-circle-green"> */
 .msig-circle-green {display: inline-block; width: 0.5rem; height: 0.5rem; background-color: green; border-radius: 50%; box-shadow: 4px 4px 6px #0D102C}
 .msig-circle-red {display: inline-block; width: 0.5rem; height: 0.5rem; background-color: red; border-radius: 50%; box-shadow: 4px 4px 6px #0D102C}
