--- a/msig.css
+++ b/msig.css
@@ -310,7 +310,8 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-padding-top-down{padding-top:16px;padding-bottom:16px;}
 .msig-padding-top-title{padding-top:211px;}
 .msig-padding-top-member-menu{padding-top:9px;}
-/* NEW */
+/* NEW */    
+.msig-padding-top-user {padding-top:271px;}
 .msig-icon-middle{vertical-align: middle;}
 .msig-card-center{margin: 0 auto;}
 
